libqt6c/src/libqregularexpression.hpp

typedef struct QRegularExpression QRegularExpression;
typedef struct QRegularExpressionMatch QRegularExpressionMatch;
typedef struct QRegularExpressionMatchIterator QRegularExpressionMatchIterator;
QRegularExpression* QRegularExpression_new();
QRegularExpression* QRegularExpression_new2(const libqt_string pattern);
QRegularExpression* QRegularExpression_new3(const QRegularExpression* re);
QRegularExpression* QRegularExpression_new4(const libqt_string pattern, int options);
int QRegularExpression_PatternOptions(const QRegularExpression* self);
void QRegularExpression_SetPatternOptions(QRegularExpression* self, int options);
void QRegularExpression_OperatorAssign(QRegularExpression* self, const QRegularExpression* re);
void QRegularExpression_Swap(QRegularExpression* self, QRegularExpression* other);
libqt_string QRegularExpression_Pattern(const QRegularExpression* self);
void QRegularExpression_SetPattern(QRegularExpression* self, const libqt_string pattern);
bool QRegularExpression_IsValid(const QRegularExpression* self);
ptrdiff_t QRegularExpression_PatternErrorOffset(const QRegularExpression* self);
libqt_string QRegularExpression_ErrorString(const QRegularExpression* self);
int QRegularExpression_CaptureCount(const QRegularExpression* self);
QStringList QRegularExpression_NamedCaptureGroups(const QRegularExpression* self);
QRegularExpressionMatch* QRegularExpression_Match(const QRegularExpression* self, const libqt_string subject);
QRegularExpressionMatchIterator* QRegularExpression_GlobalMatch(const QRegularExpression* self, const libqt_string subject);
void QRegularExpression_Optimize(const QRegularExpression* self);
libqt_string QRegularExpression_Escape(const libqt_string str);
libqt_string QRegularExpression_WildcardToRegularExpression(const libqt_string str);
libqt_string QRegularExpression_AnchoredPattern(const libqt_string expression);
bool QRegularExpression_OperatorEqual(const QRegularExpression* self, const QRegularExpression* re);
bool QRegularExpression_OperatorNotEqual(const QRegularExpression* self, const QRegularExpression* re);
QRegularExpressionMatch* QRegularExpression_Match22(const QRegularExpression* self, const libqt_string subject, ptrdiff_t offset);
QRegularExpressionMatch* QRegularExpression_Match3(const QRegularExpression* self, const libqt_string subject, ptrdiff_t offset, int matchType);
QRegularExpressionMatch* QRegularExpression_Match4(const QRegularExpression* self, const libqt_string subject, ptrdiff_t offset, int matchType, int matchOptions);
QRegularExpressionMatchIterator* QRegularExpression_GlobalMatch22(const QRegularExpression* self, const libqt_string subject, ptrdiff_t offset);
QRegularExpressionMatchIterator* QRegularExpression_GlobalMatch3(const QRegularExpression* self, const libqt_string subject, ptrdiff_t offset, int matchType);
QRegularExpressionMatchIterator* QRegularExpression_GlobalMatch4(const QRegularExpression* self, const libqt_string subject, ptrdiff_t offset, int matchType, int matchOptions);
libqt_string QRegularExpression_WildcardToRegularExpression22(const libqt_string str, int options);
void QRegularExpression_Delete(QRegularExpression* self);