QtBeef/src/Qt/qregularexpression.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QRegularExpression
// --------------------------------------------------------------
[CRepr]
struct QRegularExpression_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QRegularExpression_new")]
	public static extern QRegularExpression_Ptr QRegularExpression_new();
	[LinkName("QRegularExpression_new2")]
	public static extern QRegularExpression_Ptr QRegularExpression_new2(libqt_string pattern);
	[LinkName("QRegularExpression_new3")]
	public static extern QRegularExpression_Ptr QRegularExpression_new3(void** re);
	[LinkName("QRegularExpression_new4")]
	public static extern QRegularExpression_Ptr QRegularExpression_new4(libqt_string pattern, void* options);
	[LinkName("QRegularExpression_Delete")]
	public static extern void QRegularExpression_Delete(QRegularExpression_Ptr self);
	[LinkName("QRegularExpression_PatternOptions")]
	public static extern void* QRegularExpression_PatternOptions(void* self);
	[LinkName("QRegularExpression_SetPatternOptions")]
	public static extern void QRegularExpression_SetPatternOptions(void* self, void* options);
	[LinkName("QRegularExpression_OperatorAssign")]
	public static extern void QRegularExpression_OperatorAssign(void* self, void** re);
	[LinkName("QRegularExpression_Swap")]
	public static extern void QRegularExpression_Swap(void* self, void** other);
	[LinkName("QRegularExpression_Pattern")]
	public static extern libqt_string QRegularExpression_Pattern(void* self);
	[LinkName("QRegularExpression_SetPattern")]
	public static extern void QRegularExpression_SetPattern(void* self, libqt_string pattern);
	[LinkName("QRegularExpression_IsValid")]
	public static extern bool QRegularExpression_IsValid(void* self);
	[LinkName("QRegularExpression_PatternErrorOffset")]
	public static extern void* QRegularExpression_PatternErrorOffset(void* self);
	[LinkName("QRegularExpression_ErrorString")]
	public static extern libqt_string QRegularExpression_ErrorString(void* self);
	[LinkName("QRegularExpression_CaptureCount")]
	public static extern c_int QRegularExpression_CaptureCount(void* self);
	[LinkName("QRegularExpression_NamedCaptureGroups")]
	public static extern void* QRegularExpression_NamedCaptureGroups(void* self);
	[LinkName("QRegularExpression_Match")]
	public static extern void* QRegularExpression_Match(void* self, libqt_string subject);
	[LinkName("QRegularExpression_GlobalMatch")]
	public static extern void* QRegularExpression_GlobalMatch(void* self, libqt_string subject);
	[LinkName("QRegularExpression_Optimize")]
	public static extern void QRegularExpression_Optimize(void* self);
	[LinkName("QRegularExpression_Escape")]
	public static extern libqt_string QRegularExpression_Escape(libqt_string str);
	[LinkName("QRegularExpression_WildcardToRegularExpression")]
	public static extern libqt_string QRegularExpression_WildcardToRegularExpression(libqt_string str);
	[LinkName("QRegularExpression_AnchoredPattern")]
	public static extern libqt_string QRegularExpression_AnchoredPattern(libqt_string expression);
	[LinkName("QRegularExpression_OperatorEqual")]
	public static extern bool QRegularExpression_OperatorEqual(void* self, void** re);
	[LinkName("QRegularExpression_OperatorNotEqual")]
	public static extern bool QRegularExpression_OperatorNotEqual(void* self, void** re);
	[LinkName("QRegularExpression_Match22")]
	public static extern void* QRegularExpression_Match22(void* self, libqt_string subject, void* offset);
	[LinkName("QRegularExpression_Match3")]
	public static extern void* QRegularExpression_Match3(void* self, libqt_string subject, void* offset, QRegularExpression_MatchType matchType);
	[LinkName("QRegularExpression_Match4")]
	public static extern void* QRegularExpression_Match4(void* self, libqt_string subject, void* offset, QRegularExpression_MatchType matchType, void* matchOptions);
	[LinkName("QRegularExpression_GlobalMatch22")]
	public static extern void* QRegularExpression_GlobalMatch22(void* self, libqt_string subject, void* offset);
	[LinkName("QRegularExpression_GlobalMatch3")]
	public static extern void* QRegularExpression_GlobalMatch3(void* self, libqt_string subject, void* offset, QRegularExpression_MatchType matchType);
	[LinkName("QRegularExpression_GlobalMatch4")]
	public static extern void* QRegularExpression_GlobalMatch4(void* self, libqt_string subject, void* offset, QRegularExpression_MatchType matchType, void* matchOptions);
	[LinkName("QRegularExpression_WildcardToRegularExpression22")]
	public static extern libqt_string QRegularExpression_WildcardToRegularExpression22(libqt_string str, void* options);
}
class QRegularExpression : IQRegularExpression
{
	private QRegularExpression_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QRegularExpression_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QRegularExpression_new();
	}
	public this(String pattern)
	{
		this.ptr = CQt.QRegularExpression_new2(libqt_string(pattern));
	}
	public this(IQRegularExpression re)
	{
		this.ptr = CQt.QRegularExpression_new3((.)re?.ObjectPtr);
	}
	public this(String pattern, void* options)
	{
		this.ptr = CQt.QRegularExpression_new4(libqt_string(pattern), options);
	}
	public ~this()
	{
		CQt.QRegularExpression_Delete(this.ptr);
	}
	public void* PatternOptions()
	{
		return CQt.QRegularExpression_PatternOptions((.)this.ptr.Ptr);
	}
	public void SetPatternOptions(void* options)
	{
		CQt.QRegularExpression_SetPatternOptions((.)this.ptr.Ptr, options);
	}
	public void Swap(IQRegularExpression other)
	{
		CQt.QRegularExpression_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public void Pattern(String outStr)
	{
		CQt.QRegularExpression_Pattern((.)this.ptr.Ptr);
	}
	public void SetPattern(String pattern)
	{
		CQt.QRegularExpression_SetPattern((.)this.ptr.Ptr, libqt_string(pattern));
	}
	public bool IsValid()
	{
		return CQt.QRegularExpression_IsValid((.)this.ptr.Ptr);
	}
	public void* PatternErrorOffset()
	{
		return CQt.QRegularExpression_PatternErrorOffset((.)this.ptr.Ptr);
	}
	public void ErrorString(String outStr)
	{
		CQt.QRegularExpression_ErrorString((.)this.ptr.Ptr);
	}
	public c_int CaptureCount()
	{
		return CQt.QRegularExpression_CaptureCount((.)this.ptr.Ptr);
	}
	public void* NamedCaptureGroups()
	{
		return CQt.QRegularExpression_NamedCaptureGroups((.)this.ptr.Ptr);
	}
	public QRegularExpressionMatch_Ptr Match(String subject)
	{
		return QRegularExpressionMatch_Ptr(CQt.QRegularExpression_Match((.)this.ptr.Ptr, libqt_string(subject)));
	}
	public QRegularExpressionMatchIterator_Ptr GlobalMatch(String subject)
	{
		return QRegularExpressionMatchIterator_Ptr(CQt.QRegularExpression_GlobalMatch((.)this.ptr.Ptr, libqt_string(subject)));
	}
	public void Optimize()
	{
		CQt.QRegularExpression_Optimize((.)this.ptr.Ptr);
	}
	public void Escape(String outStr, String str)
	{
		CQt.QRegularExpression_Escape(libqt_string(str));
	}
	public void WildcardToRegularExpression(String outStr, String str)
	{
		CQt.QRegularExpression_WildcardToRegularExpression(libqt_string(str));
	}
	public void AnchoredPattern(String outStr, String expression)
	{
		CQt.QRegularExpression_AnchoredPattern(libqt_string(expression));
	}
	public QRegularExpressionMatch_Ptr Match22(String subject, void* offset)
	{
		return QRegularExpressionMatch_Ptr(CQt.QRegularExpression_Match22((.)this.ptr.Ptr, libqt_string(subject), offset));
	}
	public QRegularExpressionMatch_Ptr Match3(String subject, void* offset, QRegularExpression_MatchType matchType)
	{
		return QRegularExpressionMatch_Ptr(CQt.QRegularExpression_Match3((.)this.ptr.Ptr, libqt_string(subject), offset, matchType));
	}
	public QRegularExpressionMatch_Ptr Match4(String subject, void* offset, QRegularExpression_MatchType matchType, void* matchOptions)
	{
		return QRegularExpressionMatch_Ptr(CQt.QRegularExpression_Match4((.)this.ptr.Ptr, libqt_string(subject), offset, matchType, matchOptions));
	}
	public QRegularExpressionMatchIterator_Ptr GlobalMatch22(String subject, void* offset)
	{
		return QRegularExpressionMatchIterator_Ptr(CQt.QRegularExpression_GlobalMatch22((.)this.ptr.Ptr, libqt_string(subject), offset));
	}
	public QRegularExpressionMatchIterator_Ptr GlobalMatch3(String subject, void* offset, QRegularExpression_MatchType matchType)
	{
		return QRegularExpressionMatchIterator_Ptr(CQt.QRegularExpression_GlobalMatch3((.)this.ptr.Ptr, libqt_string(subject), offset, matchType));
	}
	public QRegularExpressionMatchIterator_Ptr GlobalMatch4(String subject, void* offset, QRegularExpression_MatchType matchType, void* matchOptions)
	{
		return QRegularExpressionMatchIterator_Ptr(CQt.QRegularExpression_GlobalMatch4((.)this.ptr.Ptr, libqt_string(subject), offset, matchType, matchOptions));
	}
	public void WildcardToRegularExpression22(String outStr, String str, void* options)
	{
		CQt.QRegularExpression_WildcardToRegularExpression22(libqt_string(str), options);
	}
}
interface IQRegularExpression : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QRegularExpressionMatch
// --------------------------------------------------------------
[CRepr]
struct QRegularExpressionMatch_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
